--- a/heatmap-electron-fe/assets/css/heatmap.css
+++ b/heatmap-electron-fe/assets/css/heatmap.css
@@ -106,14 +106,23 @@ button {
     /* Cursor on hover */
 }
 
-#heatmap-canvas {
-    position: absolute;
-}
-
-#room-layout {
-    position: absolute;
-}
-
+#heatmap-canvas,
+#room-layout,
 #node-layout {
     position: absolute;
+}
+
+.metrics {
+    width: 100%;
+    height: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+}
+
+#temp,
+p {
+    all: inherit;
+    color: #3F51B5;
+    left: 10px;
 }
